<resources>
    <string name="app_name">朝歌</string>
    <string name="str_login">登录</string>
    <string name="other_login">其他登录方式</string>
    <string name="login_hint">使用手机号直接登录</string>
    <string name="_86">+86</string>
    <string name="str_login_numberHint">请输入手机号</string>
    <string name="str_login_codeHint">请输入验证码</string>
    <string name="str_login_btnCode">获取验证码</string>
    <!-- 科大讯飞  语音云官网申请的appid -->

    <string name="str_share">请选择分享方式</string>
    <string name="str_attention">关注</string>
    <string name="cancel">取消</string>


    <string name="brvah_load_end">已展示全部</string>

</resources>
