<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp">

        <TextView
            android:id="@+id/tv_login_back"
            android:layout_width="35dp"
            android:layout_height="@dimen/_42dp"
            android:layout_marginTop="20dp"
            android:layout_alignParentRight="true"
            android:drawableStart="@drawable/cancel"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_15sp" />


    </RelativeLayout>


    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_28dp"
        android:layout_marginStart="@dimen/_28dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="绑定手机"
            android:textColor="@color/colorBlack"
            android:textSize="31sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="输入手机号以绑定手机"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42dp"
            android:layout_marginTop="@dimen/_14dp"
            android:background="@drawable/circle_corner_gray_bg_normal_2dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_21dp"
                android:text="@string/_86"
                android:textColor="@color/_262628"
                android:textSize="@dimen/_14sp" />

            <EditText
                android:id="@+id/et_boundMobile_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_37dp"
                android:background="@null"
                android:hint="@string/str_login_numberHint"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/_9B9B9B"
                android:textSize="@dimen/_13sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42dp"
            android:layout_marginTop="@dimen/_14dp"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="@dimen/_195dp"
                android:layout_height="match_parent"
                android:background="@drawable/circle_corner_gray_bg_normal_2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_21dp"
                    android:text="验证码"
                    android:textColor="@color/_262628"
                    android:textSize="@dimen/_14sp" />

                <EditText
                    android:id="@+id/et_boundMobile_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/str_login_codeHint"
                    android:inputType="number"
                    android:maxLength="6"
                    android:paddingEnd="@dimen/_10dp"
                    android:paddingStart="@dimen/_18dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/_9B9B9B"
                    android:textSize="@dimen/_13sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_boundMobile_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_10dp"
                android:background="@drawable/selector_login_button_bg"
                android:text="@string/str_login_btnCode"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sp" />

        </LinearLayout>

    </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/_28dp"
        android:layout_marginStart="@dimen/_28dp">

        <Button
            android:id="@+id/btn_boundMobile_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_44dp"
            android:background="@drawable/selector_login_button_bg"
            android:text="完成"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp" />


    </RelativeLayout>


</LinearLayout>